syntax = "proto3";

package v1;

import "google/api/annotations.proto";

option go_package = "starter-kit-grpc-golang/api/gen/v1;v1";

service HealthService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string message = 2;
}